--- a/app/partials/gcBubbleRow.html
+++ b/app/partials/gcBubbleRow.html
@@ -1,3 +1,6 @@
 <div class="bubbleRow">
-    <b class="bubble" ng-repeat="bubble in choices">{{ bubble }}</b>
+    <b class="bubble"
+       ng-repeat="bubble in choices"
+       ng-bind-html="getBubbleValue(bub, $index)"
+       ng-click="toggleBubbleValue($index, $event);"></b>
 </div>
