--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -1,4 +1,5 @@
 <p>
-    <gc-bubble-row choices="data.choices"></gc-bubble-row>
-    <input type="text" ng-model="data.choices">
+    <gc-bubble-row choices="data.choices" value="data.value"></gc-bubble-row>
+    <label>Choices: <input type="text" ng-model="data.choices"></label>
+    <label>Value: <input type="text" ng-model="data.value"></label>
 </p>
