Add answer key entry for view 2 to illustrate reusing the directive

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -38,3 +38,8 @@
 }
 
 .bubbleRow { font-family: GCBubbles; }
+
+.left-panel { position: relative; width: 45%; float: left; }
+.right-panel { position: relative; width: 45%; float: left; }
+
+.clearfix { clear: both; }
